--- a/client/assets/scss/header.css
+++ b/client/assets/scss/header.css
@@ -1,7 +1,6 @@
-h2.sce {
+h2.text {
   font-family: Georgia, serif !important;
   font-weight: 400;
-  font-size: 2.25rem;
   margin: 20px;
   line-height: 1.2;
   text-transform: uppercase;
